Install java 25 with sdkman (#107)
* Checkpoint before follow-up message

Co-authored-by: bren <bren@juanantonio.info>

* Refactor: Address code smells and bugs

This commit resolves various code smells and bugs identified by static analysis tools. It includes removing unused imports and variables, simplifying assertions, and addressing potential security vulnerabilities related to XML parsing.

Co-authored-by: bren <bren@juanantonio.info>

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>